# IFJproject

./: CMakeLists.txt  LL tabulka.xlsx  LL_gramatika  Makefile  Precedenční tabulka.xlsx  codegenerator.c  codegenerator.h  error.h  expression.c  expression.h  ifj20go.c  ifj20go.h  main.c  parser.c  parser.h  scanner.c  scanner.h  string.c  string.h  string_dyn.c  string_dyn.h  symstack.c  symstack.h  symtable.c  symtable.h  test  test.c  test.h
compiled/: test
dokumentace/: main.tex
